<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BluetoothDemo</string>
    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="start_search">Start search</string>
    <string name="not_support_bluetooth">Not support Bluetooth</string>
    <string name="bluetooth_not_enabled">Bluetooth not enabled</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="available_devices">Available devices</string>
    <string name="search_bluetooth_devices">Search devices</string>
    <string name="searching">Searching...</string>
    <string name="connecting_to">Connecting to</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_data">No data received</string>

    <string name="temperature">温度</string>
    <string name="pressure">压力</string>
    <string name="wind">风</string>
    <string name="wind_front">正风</string>
    <string name="wind_side">测风</string>
    <string name="acceleration">加速度</string>
    
</resources>
