<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$PlaceholderFragment">

    <TextView
        android:id="@+id/no_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_data"
        android:gravity="center"
        android:textSize="20sp" />

    <TableLayout
        android:id="@+id/result_table"
        android:visibility="invisible"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp">

        <TableRow
            android:id="@+id/temperature_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/temperature"/>

            <TextView
                android:id="@+id/temperature"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="15"/>
        </TableRow>

        <TableRow
            android:id="@+id/pressure_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/pressure"/>

            <TextView
                android:id="@+id/pressure"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="101.3"/>
        </TableRow>

        <TableRow
            android:id="@+id/wind_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/wind"/>

            <TextView
                android:id="@+id/wind"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="(8.5, -1.3)"/>
        </TableRow>

        <TableRow
            android:id="@+id/acceleration_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/acceleration"/>

            <TextView
                android:id="@+id/acceleration"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="(0.5, 0.3, 0.2)"/>
        </TableRow>
    </TableLayout>

</RelativeLayout>
